get basic clustering infrastructure working and add visualizer config

--- a/hydra_llm_ros/config/frontend_config.yaml
+++ b/hydra_llm_ros/config/frontend_config.yaml
@@ -25,9 +25,11 @@ places_clustering:
   type: PlaceClustering
   clustering:
     type: GreedyClustering
+    stop_value: 0.01
     tasks:
       type: RosTaskEmbeddings
     norm:
       type: cosine
     merge:
       type: weighted_mean
+  min_assocation_iou: 0.5
