--- a/hydra_llm_ros/config/hydra_visualizer/rooms_layer.yaml
+++ b/hydra_llm_ros/config/hydra_visualizer/rooms_layer.yaml
@@ -7,10 +7,10 @@ marker_scale: 0.2
 marker_color_mode: 0 # default
 marker_alpha: 0.8
 use_sphere_marker: false
-use_label: false
+use_label: true
 use_collapsed_label: false
 label_height: 1.25
-label_scale: 1.0
+label_scale: 0.3
 use_bounding_box: false
 bounding_box_alpha: 0.5
 collapse_bounding_box: false
