(wip) split clustering and start prepping for backend clustering

--- a/hydra_llm_ros/config/frontend_config.yaml
+++ b/hydra_llm_ros/config/frontend_config.yaml
@@ -24,7 +24,7 @@ graph_extractor:
 places_clustering:
   type: PlaceClustering
   clustering:
-    type: GreedyClustering
+    type: $(arg places_clustering_type)
     stop_value: 0.0
     tasks:
       type: RosTaskEmbeddings
