--- a/hydra_llm_ros/CMakeLists.txt
+++ b/hydra_llm_ros/CMakeLists.txt
@@ -19,7 +19,7 @@ catkin_package(
 
 add_library(
   ${PROJECT_NAME} src/hydra_llm_pipeline.cpp src/llm_frontend.cpp
-                  src/ros_task_embeddings.cpp src/places_visualizer.cpp
+                  src/ros_embedding_group.cpp src/places_visualizer.cpp
 )
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES} hydra::hydra)
