--- a/hydra_llm_ros/config/uhumans2.yaml
+++ b/hydra_llm_ros/config/uhumans2.yaml
@@ -1,4 +1,56 @@
 ---
+#############################
+#  Input Module Parameters  #
+#############################
+input:
+  subscriber:
+    type: semantic
+    input_images_are_const: false
+    color_image_topic: color/image_raw
+    depth_image_topic: depth/image_rect
+    semantic_image_topic: semantic/image_raw
+    queue_size: 100
+#############################################
+#  Active-Window Reconstruction Parameters  #
+#############################################
+reconstruction:
+  active_window:  # taken from Khronos
+    find_visible_blocks_accurately: false
+    max_frame_data_buffer_size: 300
+    store_every_n_frame_data: 1
+    min_object_allocation_confidence: 0.5
+    min_object_volume: 0.01  # m^3
+    min_object_reconstruction_confidence: 0.5
+    scale_object_reconstruction_confidence_with_weight: true
+    min_object_reconstruction_observations: 5
+    object_reconstruction_resolution: -0.02  # Positive: voxel size in meters. Negative: fraction of the extent. 0: Skip. (-0.02)
+    volumetric_map:
+      voxel_size: 0.1  # m
+      truncation_distance: 0.3  # m (Usually 2-3x voxel size)
+      voxels_per_side: 16
+    object_detector:
+      type: instance_forwarding   # 'connected_semantics' 'instance_forwarding'
+      min_cluster_size: 100  # pixels
+      use_full_connectivity: true
+      use_3d: true
+      grid_size: 0.1  # m
+      max_range: $(arg sensor_max_range)
+    tracker:
+      type: max_iou   # 'max_iou'
+      track_by: voxels   # 'pixels', 'voxels', 'bounding_box'
+      min_semantic_iou: 0.25
+      min_cosine_sim: 0.7
+      min_cross_iou: 0.1
+      temporal_window: $(arg temporal_window_size_s)
+      min_num_observations: 30
+    projective_integrator:
+      max_weight: 100000
+      interpolation_method: adaptive   # "nearest", "bilinear", "adaptive"
+    tracking_integrator:
+      temporal_window: $(arg temporal_window_size_s)
+#########################
+#  Frontend Parameters  #
+#########################
 frontend:
   type: LLMFrontend
   pgmo:
@@ -22,12 +74,15 @@ frontend:
     min_edge_distance_m: 0.25
     node_merge_distance_m: 0.5
     add_heuristic_edges: false
+########################
+#  Backend Parameters  #
+########################
 backend:
   type: BackendModule
   dsg:
     places_merge_distance_tolerance_m: 0.4
   pgmo:
-    run_mode: 0    # kimera_pgmo run mode FULL (required)
+    run_mode: 0  # kimera_pgmo run mode FULL (required)
     use_msg_time: true
     embed_trajectory_delta_t: 5.0
     num_interp_pts: 3
