--- a/hydra_llm_ros/CMakeLists.txt
+++ b/hydra_llm_ros/CMakeLists.txt
@@ -20,7 +20,7 @@ catkin_package(
 add_library(
   ${PROJECT_NAME}
   src/active_window_module.cpp src/hydra_llm_pipeline.cpp src/llm_frontend.cpp
-  src/ros_embedding_group.cpp src/places_visualizer.cpp
+  src/ros_embedding_group.cpp src/llm_places_visualizer.cpp
 )
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES} hydra::hydra)
