--- a/hydra_llm_ros/config/uhumans2.yaml
+++ b/hydra_llm_ros/config/uhumans2.yaml
@@ -18,11 +18,22 @@ input:
     depth_image_topic: depth/image_rect
     semantic_image_topic: semantic/image_raw
     queue_size: 100
+  label_info:
+    type: csv
+    label_file: $(arg object_label_file)
 #############################################
 #  Active-Window Reconstruction Parameters  #
 #############################################
 reconstruction:
+  use_visualizer: true
+  active_window_viz:
+    color_mode: "color"
+    slice_height: -0.5
+    slice_height_is_relative: true
+    activity_shading_intensity: 0.6
+    object_color_mode: 0
   active_window:  # taken from Khronos
+    verbosity: 1
     find_visible_blocks_accurately: false
     max_frame_data_buffer_size: 300
     store_every_n_frame_data: 1
@@ -31,13 +42,13 @@ reconstruction:
     min_object_reconstruction_confidence: 0.5
     scale_object_reconstruction_confidence_with_weight: true
     min_object_reconstruction_observations: 5
-    object_reconstruction_resolution: -0.02  # Positive: voxel size in meters. Negative: fraction of the extent. 0: Skip. (-0.02)
+    object_reconstruction_resolution: -0.1  # Positive: voxel size in meters. Negative: fraction of the extent. 0: Skip. (-0.02)
     volumetric_map:
       voxel_size: 0.1  # m
       truncation_distance: 0.3  # m (Usually 2-3x voxel size)
       voxels_per_side: 16
     object_detector:
-      type: instance_forwarding   # 'connected_semantics' 'instance_forwarding'
+      type: connected_semantics   # 'connected_semantics' 'instance_forwarding'
       min_cluster_size: 100  # pixels
       use_full_connectivity: true
       use_3d: true
@@ -47,15 +58,17 @@ reconstruction:
       type: max_iou   # 'max_iou'
       track_by: voxels   # 'pixels', 'voxels', 'bounding_box'
       min_semantic_iou: 0.25
-      min_cosine_sim: 0.7
+      min_cosine_sim: -1.0
       min_cross_iou: 0.1
       temporal_window: $(arg temporal_window_size_s)
       min_num_observations: 30
     projective_integrator:
       max_weight: 100000
       interpolation_method: adaptive   # "nearest", "bilinear", "adaptive"
+      verbosity: 1
     tracking_integrator:
       temporal_window: $(arg temporal_window_size_s)
+      verbosity: 1
 #########################
 #  Frontend Parameters  #
 #########################
@@ -65,7 +78,7 @@ frontend:
     horizon: 15.0
     d_graph_resolution: 2.5
     output_mesh_resolution: 0.005
-  min_object_vertices: 40
+  min_object_vertices: 0
   prune_mesh_indices: true
   gvd:
     max_distance_m: 4.5
