--- a/hydra_llm_ros/config/realsense.yaml
+++ b/hydra_llm_ros/config/realsense.yaml
@@ -23,7 +23,7 @@ input:
     color_image_topic: color/image_raw
     depth_image_topic: depth/image_rect
     semantic_image_topic: semantic/image_raw
-    queue_size: 100
+    queue_size: 1000
 #############################################
 #  Active-Window Reconstruction Parameters  #
 #############################################
@@ -44,17 +44,19 @@ reconstruction:
     store_every_n_frame_data: 1
     min_object_allocation_confidence: 0.5
     min_object_volume: 0.0  # m^3
+    only_extract_reconstructed_objects: true
     min_object_reconstruction_confidence: 0.5
     scale_object_reconstruction_confidence_with_weight: true
     min_object_reconstruction_observations: 0
     object_reconstruction_resolution: -0.02  # Positive: voxel size in meters. Negative: fraction of the extent. 0: Skip. (-0.02)
     volumetric_map:
-      voxel_size: 0.1  # m
-      truncation_distance: 0.3  # m (Usually 2-3x voxel size)
+      voxel_size: 0.15  # m
+      truncation_distance: 0.35  # m (Usually 2-3x voxel size)
       voxels_per_side: 16
     object_detector:
       type: $(arg object_detection_type)
-      min_cluster_size: 100  # pixels
+      min_cluster_size: 20  # pixels
+      max_cluster_size: 50000 # pixels
       use_full_connectivity: true
       use_3d: true
       grid_size: 0.1  # m
@@ -62,11 +64,11 @@ reconstruction:
     tracker:
       type: max_iou   # 'max_iou'
       track_by: voxels   # 'pixels', 'voxels', 'bounding_box'
-      min_semantic_iou: 0.3
+      min_semantic_iou: 0.5
       min_cosine_sim: 0.7
       min_cross_iou: 0.1
       temporal_window: $(arg temporal_window_size_s)
-      min_num_observations: 3
+      min_num_observations: 5
     projective_integrator:
       max_weight: 100000
       interpolation_method: adaptive   # "nearest", "bilinear", "adaptive"
