Feature/robot aware places (#7)
* update config namespaces to match hydra

* tweak visualizer config slightly for robot use

* color objects by active and reduce scale

* add spot config

* Llm/feature/multicam (#4)

* adapt to new sensor architecture in khronos

* (wip) start adding infrastructure for multiple input modules

* initialize more than one subscriber if specified

* fix uhumans2 config

* update realsense config

* fix bugs with places disabled

* add rotation for gravity alignment

* (wip) start on multi-cam spot

* clean up visualization config and set places colormap to sane values

* try different stop values

* add semi-working spot multicam pipeline

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>

* tweak visualizer config slightly for robot use

* add spot config

* Llm/feature/multicam (#4)

* adapt to new sensor architecture in khronos

* (wip) start adding infrastructure for multiple input modules

* initialize more than one subscriber if specified

* fix uhumans2 config

* update realsense config

* fix bugs with places disabled

* add rotation for gravity alignment

* (wip) start on multi-cam spot

* clean up visualization config and set places colormap to sane values

* try different stop values

* add semi-working spot multicam pipeline

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>

* update branch name

* add robot footprint

* fix warnings

* fix module settings to toggle correctly between closed/open set

* update replica config

* update launch file to have reasonable eval defaults

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>
Co-authored-by: Matthew Trang <matthew.trang@ll.mit.edu>
Co-authored-by: Yun Chang <yunchang@mit.edu>

--- a/hydra_llm_ros/config/realsense.yaml
+++ b/hydra_llm_ros/config/realsense.yaml
@@ -2,21 +2,23 @@
 #############################
 #  Input Module Parameters  #
 #############################
+inputs:
+  - ns: input
+    sensor:
+      type: camera
+      width: 640
+      height: 360
+      cx: 315.9902073557914
+      cy: 254.59437002701452
+      fx: 372.4634094238281
+      fy: 371.5072021484375
+      min_range: $(arg sensor_min_range)
+      max_range: $(arg sensor_max_range)
+      extrinsics:
+        type: identity
 input:
   global_frame_name: $(arg odom_frame)
   sensor_frame_name: $(arg sensor_frame)
-  sensor:
-    type: camera
-    width: 640
-    height: 360
-    cx: 315.9902073557914
-    cy: 254.59437002701452
-    fx: 372.4634094238281
-    fy: 371.5072021484375
-    min_range: $(arg sensor_min_range)
-    max_range: $(arg sensor_max_range)
-    extrinsics:
-      type: identity
   subscriber:
     type: $(arg subscriber_type)
     input_images_are_const: false
@@ -88,21 +90,23 @@ frontend:
     output_mesh_resolution: 0.02
   min_object_vertices: 0
   prune_mesh_indices: true
-  gvd:
-    max_distance_m: 4.5
-    min_diff_m: 0.1
-    min_basis_for_extraction: 1
-    voronoi_config:
-      min_distance_m: 0.30
-      parent_l1_separation: 20
-      parent_cos_angle_separation: 0.2
-  graph_extractor:
-    type: CompressionGraphExtractor
-    compression_distance_m: 1.0
-    min_node_distance_m: 0.4
-    min_edge_distance_m: 0.25
-    node_merge_distance_m: 0.5
-    add_heuristic_edges: false
+  places:
+    type: gvd
+    gvd:
+      max_distance_m: 4.5
+      min_diff_m: 0.1
+      min_basis_for_extraction: 1
+      voronoi_config:
+        min_distance_m: 0.30
+        parent_l1_separation: 20
+        parent_cos_angle_separation: 0.2
+    graph:
+      type: CompressionGraphExtractor
+      compression_distance_m: 1.0
+      min_node_distance_m: 0.4
+      min_edge_distance_m: 0.25
+      node_merge_distance_m: 0.5
+      add_heuristic_edges: false
 ########################
 #  Backend Parameters  #
 ########################
@@ -148,7 +152,7 @@ backend:
       min_assocation_iou: 0.8
       clustering:
         type: $(arg places_clustering_type)
-        stop_value: 0.0
+        stop_value: 0.01
         tasks:
           type: RosEmbeddingGroup
         metric:
