--- a/hydra_llm_ros/config/dev_visualizer_config.yaml
+++ b/hydra_llm_ros/config/dev_visualizer_config.yaml
@@ -1,6 +1,7 @@
 ---
+visualizer_frame: $(arg visualizer_frame)
 config:
-  layer_z_step: 2.0  # unit separation between layers
+  layer_z_step: 5.5  # unit separation between layers
   mesh_edge_break_ratio: 0.5
   mesh_layer_offset: 0.0
   collapse_layers: false
@@ -21,23 +22,23 @@ config:
       luminance: 0.7
       edge_sl_ratio: 0.6
       node_scale: 0.1
-      node_alpha: 0.65
+      node_alpha: 0.6
       node_use_sphere: true
       edge_scale: 0.05
-      edge_alpha: 0.8
-      label_height: 0.5
-      label_scale: 0.4
+      edge_alpha: 0.6
+      label_height: 0.3
+      label_scale: 0.2
       color_offset: 3
       interlayer_edge_insertion_skip: 10
       visualize_interlayer_edges: false
       z_offset_scale: 0.0
   layer2:
     # generic
-    z_offset_scale: 2.0
-    visualize: true
+    z_offset_scale: 0.0
+    visualize: false
     # node
-    marker_scale: 0.30
-    marker_color_mode: 3  # default
+    marker_scale: 0.40
+    marker_color_mode: 0  # default
     marker_alpha: 0.6
     use_sphere_marker: false
     use_label: false
@@ -45,7 +46,7 @@ config:
     label_height: 0.5
     label_scale: 0.45
     use_bounding_box: true
-    bounding_box_alpha: 0.6
+    bounding_box_alpha: 0.9
     bbox_wireframe_scale: 0.05
     bbox_wireframe_edge_scale: 0.05
     collapse_bounding_box: true
@@ -61,11 +62,11 @@ config:
     intralayer_edge_insertion_skip: 0
   layer3:
     # general
-    z_offset_scale: 3.0
+    z_offset_scale: 0.0
     visualize: true
     # nodes
     marker_scale: 0.2
-    marker_color_mode: 1  # parent
+    marker_color_mode: 3  # parent
     marker_alpha: 0.9
     use_sphere_marker: true
     use_label: false
@@ -87,7 +88,7 @@ config:
     intralayer_edge_insertion_skip: 0
   layer4:
     # general
-    z_offset_scale: 4.2
+    z_offset_scale: 1.0
     visualize: true
     # nodes
     marker_scale: 0.2
