--- a/hydra_llm_ros/config/task_visualizer_config.yaml
+++ b/hydra_llm_ros/config/task_visualizer_config.yaml
@@ -1,6 +1,7 @@
 ---
+visualizer_frame: $(arg visualizer_frame)
 config:
-  layer_z_step: 2.0  # unit separation between layers
+  layer_z_step: 5.5  # unit separation between layers
   mesh_edge_break_ratio: 0.5
   mesh_layer_offset: 0.0
   collapse_layers: false
@@ -13,62 +14,28 @@ config:
     max_saturation: 0.8
     min_luminance: 0.6
     max_luminance: 0.85
+  place_tasks:
+    min_hue: 0.0
+    max_hue: 0.13
+    min_saturation: 0.7
+    max_saturation: 0.9
+    min_luminance: 0.5
+    max_luminance: 0.8
   dynamic_layers:
     '2':
-      visualize: true
-      num_colors: 5
-      saturation: 0.9
-      luminance: 0.7
-      edge_sl_ratio: 0.6
-      node_scale: 0.1
-      node_alpha: 0.65
-      node_use_sphere: true
-      edge_scale: 0.05
-      edge_alpha: 0.8
-      label_height: 0.5
-      label_scale: 0.4
-      color_offset: 3
-      interlayer_edge_insertion_skip: 10
-      visualize_interlayer_edges: false
-      z_offset_scale: 0.0
+      visualize: false
   layer2:
-    # generic
-    z_offset_scale: 2.0
-    visualize: true
-    # node
-    marker_scale: 0.30
-    marker_color_mode: 3  # default
-    marker_alpha: 0.6
-    use_sphere_marker: false
-    use_label: false
-    use_collapsed_label: true
-    label_height: 0.5
-    label_scale: 0.45
-    use_bounding_box: true
-    bounding_box_alpha: 0.6
-    bbox_wireframe_scale: 0.05
-    bbox_wireframe_edge_scale: 0.05
-    collapse_bounding_box: true
-    # edge
-    use_edge_source: true
-    interlayer_edge_scale: 0.05
-    interlayer_edge_alpha: 0.3
-    interlayer_edge_use_color: true
-    interlayer_edge_insertion_skip: 10
-    intralayer_edge_scale: 0.03
-    intralayer_edge_alpha: 0.6
-    intralayer_edge_use_color: false
-    intralayer_edge_insertion_skip: 0
+    visualize: false
   layer3:
     # general
-    z_offset_scale: 3.0
-    visualize: true
+    z_offset_scale: 0.0
+    visualize: false
     # nodes
-    marker_scale: 0.2
+    marker_scale: 0.3
     marker_color_mode: 1  # parent
-    marker_alpha: 0.9
+    marker_alpha: 1.0
     use_sphere_marker: true
-    use_label: false
+    use_label: true
     use_collapsed_label: false
     label_height: 1.0
     label_scale: 0.5
@@ -81,14 +48,14 @@ config:
     interlayer_edge_alpha: 0.4
     interlayer_edge_use_color: true
     interlayer_edge_insertion_skip: 0
-    intralayer_edge_scale: 0.01
+    intralayer_edge_scale: 0.005
     intralayer_edge_alpha: 0.5
     intralayer_edge_use_color: false
     intralayer_edge_insertion_skip: 0
   layer4:
     # general
     z_offset_scale: 4.2
-    visualize: true
+    visualize: false
     # nodes
     marker_scale: 0.2
     marker_color_mode: 0  # default
@@ -115,10 +82,17 @@ config:
     visualize: false
 llm_plugins:
   dsg_mesh: MeshPlugin
-  # llm_places: LLMPlacesVisualizer
+  llm_places: LLMPlacesVisualizer
 dsg_mesh:
   label_colormap: ''
   color_by_label: false
 llm_places:
-  min_score: 0.58
-  max_score: 0.65
+  min_score: 0.20
+  max_score: 0.35
+  use_fixed_range: true
+  metric:
+    type: cosine  # lerf
+    cannonical_features:
+      type: RosEmbeddingGroup
+      service_name: /get_cannonical
+
