--- a/hydra_llm_ros/config/replica.yaml
+++ b/hydra_llm_ros/config/replica.yaml
@@ -46,6 +46,7 @@ reconstruction:
     store_every_n_frame_data: 1
     min_object_allocation_confidence: 0.5
     min_object_volume: 0.0  # m^3
+    max_object_volume: 8.0  # m^3
     only_extract_reconstructed_objects: true
     min_object_reconstruction_confidence: 0.5
     scale_object_reconstruction_confidence_with_weight: true
@@ -58,7 +59,7 @@ reconstruction:
     object_detector:
       type: $(arg object_detection_type)
       min_cluster_size: 20  # pixels
-      max_cluster_size: 50000 # pixels
+      max_cluster_size: 200000 # pixels
       use_full_connectivity: true
       use_3d: true
       grid_size: 0.1  # m
@@ -66,11 +67,11 @@ reconstruction:
     tracker:
       type: max_iou   # 'max_iou'
       track_by: voxels   # 'pixels', 'voxels', 'bounding_box'
-      min_semantic_iou: 0.5
+      min_semantic_iou: 0.25
       min_cosine_sim: 0.7
       min_cross_iou: 0.1
       temporal_window: $(arg temporal_window_size_s)
-      min_num_observations: 5
+      min_num_observations: 15
     projective_integrator:
       max_weight: 100000
       interpolation_method: adaptive   # "nearest", "bilinear", "adaptive"
@@ -83,7 +84,7 @@ reconstruction:
 #########################
 frontend:
   type: LLMFrontend
-  min_object_merge_similiarity: 0.8
+  min_object_merge_similiarity: 0.7
   pgmo:
     horizon: 60.0
     d_graph_resolution: 2.5
