Feature/places proto (#9)
* (wip) start on newer implementation, unit test entropy stuff

* (wip) add initial edge selection implementations

* (wip) impelement almost everything for clustering to work

* (wip) start on testing clustering workspace

* fix compilation

* finish testing merges and workspace setup

* test setup probabilities for ib method

* fix bug in py_z and add more tests

* drop vector wrapper class

* assign features directly to places in view database

* fix class name typo

* update launch files for places slightly

* fix missing field in config declare

* add extra debugging and fix tolerance sign

* add cluster extraction test and fix extraction bug

* adjust printing and fix viz settings

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>

--- a/hydra_llm/CMakeLists.txt
+++ b/hydra_llm/CMakeLists.txt
@@ -18,15 +18,19 @@ catkin_package(
 
 add_library(
   ${PROJECT_NAME}
+  src/agglomerative_clustering.cpp
   src/clustering.cpp
+  src/clustering_workspace.cpp
   src/embedding_distances.cpp
   src/embedding_group.cpp
-  src/greedy_clustering.cpp
+  src/ib_edge_selector.cpp
   src/merge_utilities.cpp
   src/no_clustering.cpp
   src/passthrough_clustering.cpp
   src/places_clustering.cpp
+  src/probability_utilities.cpp
   src/region_update_functor.cpp
+  src/requery_edge_selector.cpp
   src/view_database.cpp
 )
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
