--- a/hydra_llm_ros/config/spot_multi.yaml
+++ b/hydra_llm_ros/config/spot_multi.yaml
@@ -28,7 +28,7 @@ input1:
   global_frame_name: $(arg odom_frame)
   sensor_frame_name: $(arg sensor1_frame)
   subscriber:
-    type: semantic
+    type: $(arg subscriber_type)
     input_images_are_const: false
     color_image_topic: color/image_raw
     depth_image_topic: depth/image_rect
@@ -38,7 +38,7 @@ input2:
   global_frame_name: $(arg odom_frame)
   sensor_frame_name: $(arg sensor2_frame)
   subscriber:
-    type: semantic
+    type: $(arg subscriber_type)
     input_images_are_const: false
     color_image_topic: color/image_raw
     depth_image_topic: depth/image_rect
@@ -110,6 +110,7 @@ frontend:
     d_graph_resolution: 2.5
     output_mesh_resolution: 0.005
   min_object_vertices: 0
+  min_object_score: 0.2
   prune_mesh_indices: true
   places:
     type: gvd
