--- a/hydra_llm_ros/config/realsense.yaml
+++ b/hydra_llm_ros/config/realsense.yaml
@@ -42,7 +42,7 @@ reconstruction:
   active_window:  # taken from Khronos
     verbosity: 1
     find_visible_blocks_accurately: false
-    max_frame_data_buffer_size: 300
+    max_frame_data_buffer_size: 1000
     store_every_n_frame_data: 1
     min_object_allocation_confidence: 0.5
     min_object_volume: 0.0  # m^3
@@ -50,7 +50,7 @@ reconstruction:
     only_extract_reconstructed_objects: true
     min_object_reconstruction_confidence: 0.5
     scale_object_reconstruction_confidence_with_weight: true
-    min_object_reconstruction_observations: 3
+    min_object_reconstruction_observations: 5
     object_reconstruction_resolution: -0.02  # Positive: voxel size in meters. Negative: fraction of the extent. 0: Skip. (-0.02)
     volumetric_map:
       voxel_size: 0.15  # m
@@ -67,11 +67,12 @@ reconstruction:
     tracker:
       type: max_iou   # 'max_iou'
       track_by: voxels   # 'pixels', 'voxels', 'bounding_box'
-      min_semantic_iou: 0.6
+      semantic_association: assign_track # 'assign_cluster', 'assign_track'
+      min_semantic_iou: 0.5
       min_cosine_sim: 0.7
       min_cross_iou: 0.1
       temporal_window: $(arg temporal_window_size_s)
-      min_num_observations: 5
+      min_num_observations: 10
     projective_integrator:
       max_weight: 100000
       interpolation_method: adaptive   # "nearest", "bilinear", "adaptive"
