Feature/update ib (#20)
* remove requery edge selector

* remove redundant from old requery

* interface update for multi-task py_x

* switch beta metric to delta for aib

* remove todo since already stop before update if confition met

* start on cumulative and null task handling

* finish cumulative

* factorized update implemented

* bug fixes and update unittest

--- a/hydra_llm/CMakeLists.txt
+++ b/hydra_llm/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(
   src/clustering_workspace.cpp
   src/embedding_distances.cpp
   src/embedding_group.cpp
+  src/ib_utils.cpp
   src/ib_edge_selector.cpp
   src/merge_utilities.cpp
   src/no_clustering.cpp
@@ -31,7 +32,6 @@ add_library(
   src/places_clustering.cpp
   src/probability_utilities.cpp
   src/region_update_functor.cpp
-  src/requery_edge_selector.cpp
   src/view_database.cpp
 )
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
