Feature/run clustering (#19)
* move segment thresholding to clustering and start fixing launch file issues

* disable place clustering and add object clustering type

* split realsense ablations into different files

* fix waiting for embeddings

* fix issue with single object clustering segfaulting and downgrade summary verbosity

* fix param namespace

* tweak visualizer and reconstruction settings

* add clustering back in

* (wip) only run clustering for new nodes and start on tests

* start on unit test for object update functor and fix issues

* add various debugging logging for clustering and fix infinite loop for attributes

* fix hard-coded joint distribution and js divergence

* (wip) use different prefixes

* use ignored for components and remove verbose log

* add edges between places and active objects

* update config and launch to work with new reclustering changes

* add object filtering by semantic feature score and fix attribute merging

* fix bug with parent active check and toggle active flag on ignored

* fix task information from ros

* temporarily force all objects to have parents

* manually specify layer to color functor

Co-authored-by: Nathan Hughes <nathan.h.hughes@gmail.com>
Co-authored-by: Matthew Trang <matthew.trang@ll.mit.edu>

--- a/hydra_llm_ros/config/spot_multi.yaml
+++ b/hydra_llm_ros/config/spot_multi.yaml
@@ -50,7 +50,7 @@ input2:
 reconstruction:
   use_visualizer: true
   sinks:
-    - {type: TsdfOccupancyPublisher, extraction: {min_distance: 0.25}}
+    - {type: TsdfOccupancyPublisher, extraction: {min_distance: 0.25, slice_height: -0.2}}
   active_window_viz:
     color_mode: color
     global_frame_name: $(arg odom_frame)
@@ -87,7 +87,7 @@ reconstruction:
       min_cosine_sim: -1.0
       min_cross_iou: 0.1
       temporal_window: $(arg temporal_window_size_s)
-      min_num_observations: 30
+      min_num_observations: 15
     projective_integrator:
       max_weight: 100000
       interpolation_method: adaptive   # "nearest", "bilinear", "adaptive"
@@ -97,8 +97,8 @@ reconstruction:
       verbosity: 1
     robot_footprint:
       type: RobotFootprintIntegrator
-      bbox_min: [-0.5, -0.15, -0.1]
-      bbox_max: [0.5, 0.15, 0.1]
+      bbox_min: [-0.75, -0.3, -0.1]
+      bbox_max: [0.75, 0.3, 0.1]
       tsdf_weight: 1.0e-4
 #########################
 #  Frontend Parameters  #
@@ -110,7 +110,7 @@ frontend:
     d_graph_resolution: 2.5
     output_mesh_resolution: 0.005
   min_object_vertices: 0
-  min_object_score: 0.2
+  min_object_score: 0.23
   prune_mesh_indices: true
   places:
     type: gvd
@@ -130,7 +130,7 @@ frontend:
       node_merge_distance_m: 0.5
       add_heuristic_edges: true
     sinks:
-      - {type: GvdOccupancyPublisher, extraction: {min_distance: 0.25}}
+      - {type: GvdOccupancyPublisher, extraction: {min_distance: 0.25, slice_height: -0.2}}
 ########################
 #  Backend Parameters  #
 ########################
@@ -169,6 +169,10 @@ backend:
       place_merge: 10.0
       object_merge: 10.0
   enable_rooms: false
+  objects:
+    tasks:
+      type: RosEmbeddingGroup
+      min_segment_score: 0.22
   regions:
     extractor:
       type: PlaceClustering
